# py-cademy

./: README.md  manage.py  pyproject.toml
courses/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_options_alter_rate_options.py
pycademy/: asgi.py  settings.py  urls.py  wsgi.py
tests/: teste_delete.py  teste_get.py  teste_jsonpath.py  teste_post.py  teste_put.py  teste_pytest.py  teste_requests.py
