[tool.poetry]
name = "pycademy"
version = "0.1.0"
description = ""
authors = ["Diego Filgueiras <diego.filgueiras.084@ufrn.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-filter = "^24.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
