[tool.poetry]
name = "pycademy"
version = "0.1.0"
description = ""
authors = ["Diego Filgueiras <diego.filgueiras.084@ufrn.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-filter = "^24.2"
black = "^24.4.2"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"
djangorestframework = "^3.15.1"
requests = "^2.32.3"
jsonpath = "^0.82.2"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
